# remindi

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  compose.yaml
customization/: README.md  compose.override.yaml
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  SPEC.md  acceptance-performance.md
migrations/: 0001_initial.sql  0002_admin_webui.sql
src/: app.rs  clock.rs  config.rs  error.rs  lib.rs  main.rs
src/admin/: adapters.rs  audit.rs  backup.rs  mod.rs  settings.rs  workloads.rs
src/auth/: csrf.rs  mcp.rs  mod.rs  web_session.rs
src/db/: manager.rs  migrations.rs  mod.rs  transactions.rs
src/http/: health.rs  middleware.rs  mod.rs  router.rs
src/http/api/: admin.rs  mod.rs  remindi.rs
src/mcp/: mod.rs  responses.rs  schemas.rs  server.rs  views.rs
src/mcp/tools/: add.rs  cancel.rs  check.rs  complete.rs  (+5 more)
src/remindi/: evidence.rs  mod.rs  model.rs  recurrence.rs  repository.rs  service.rs  state_machine.rs
src/scheduler/: lease.rs  mod.rs  runner.rs
src/triggers/: evaluator.rs  mod.rs
src/webui/: assets.rs  mod.rs
tests/: adapters.rs  admin_core.rs  auth_mcp.rs  contract.rs  database.rs  e2e.rs  performance.rs  restore.rs  webui.rs
tests/adapters/: containment.rs  functional.rs
tests/contract/: foundation.rs  mcp_schemas.rs  mcp_tools.rs  mcp_transport.rs
tests/database/: concurrency.rs  domain.rs  foundation.rs  phase2_regressions.rs  repository.rs
tests/e2e/: docker.rs  scheduler.rs  workloads.rs
tests/restore/: backup.rs  recovery.rs  restore.rs
tests/webui/: admin.rs  api.rs  auth.rs  browser.rs
(+8 files in other folders)
