[package]
name = "remindi"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "remindi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
futures = "0.3"
getrandom = "0.4"
hmac = "0.12"
http = "1.3"
http-body-util = "0.1"
rmcp = { version = "2.2", default-features = false, features = ["server", "macros", "transport-streamable-http-server"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
schemars = { version = "1.2", features = ["uuid1"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "time", "uuid"] }
subtle = "2.6"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["limit", "request-id", "sensitive-headers", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18", features = ["serde", "v7"] }

[dev-dependencies]
rmcp = { version = "2.2", default-features = false, features = ["client", "transport-streamable-http-client-reqwest"] }

[lints.rust]
unsafe_code = "forbid"
